--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* custom-swiper.css */
+
+.swiper-pagination-bullet {
+    @apply w-3 h-3 bg-red-400 rounded-full transition duration-300 ease-in-out;
+  }
+  
+  .swiper-pagination-bullet-active {
+    @apply bg-red-600 scale-125; /* Change color and enlarge active dot */
+  }
+  
