--- a/src/index.css
+++ b/src/index.css
@@ -5,10 +5,18 @@
 /* custom-swiper.css */
 
 .swiper-pagination-bullet {
-    @apply w-3 h-3 bg-red-400 rounded-full transition duration-300 ease-in-out;
-  }
-  
-  .swiper-pagination-bullet-active {
-    @apply bg-red-600 scale-125; /* Change color and enlarge active dot */
-  }
-  
+  @apply w-3 h-3 bg-red-400 rounded-full transition duration-300 ease-in-out;
+}
+
+.swiper-pagination-bullet-active {
+  @apply bg-red-600 scale-125;
+}
+
+.custom-pagination-bullet {
+  background-color: #ff0000; 
+  opacity: 1; 
+}
+
+.custom-pagination-bullet.swiper-pagination-bullet-active {
+  background-color: #0000ff; 
+}
