--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
-/* custom-swiper.css */
+html {
+  scroll-behavior: smooth;
+}
 
 .swiper-pagination-bullet {
   @apply w-3 h-3 bg-red-400 rounded-full transition duration-300 ease-in-out;
@@ -13,10 +15,10 @@
 }
 
 .custom-pagination-bullet {
-  background-color: #ff0000; 
-  opacity: 1; 
+  background-color: #ff0000;
+  opacity: 1;
 }
 
 .custom-pagination-bullet.swiper-pagination-bullet-active {
-  background-color: #0000ff; 
+  background-color: #0000ff;
 }
