--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+::selection {
+  @apply bg-red-500 text-white;
+}
+
 html {
   scroll-behavior: smooth;
 }
